--- a/api/package.json
+++ b/api/package.json
@@ -16,5 +16,10 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1"
   }
 }
