--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "standard",
+    "extends": [
+    "plugin:security/recommended",
+    "eslint:recommended"
+],
     "overrides": [
     ],
     "parserOptions": {
@@ -11,5 +14,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "semi": "error"
     }
 }
